--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": "https://thegemmell.github.io/cloud-recordings",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/core": "^5.4.0",
+    "@mantine/hooks": "^5.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
